kubernetes_OLD/yml/springbootadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springbootadmin
  labels:
    app: springbootadmin
spec:
#  serviceName: "springbootadmin-hs"
  replicas: 1
  selector:
    matchLabels:
      app: springbootadmin
  template:
    metadata:
      labels:
        app: springbootadmin
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"  
    spec:
      serviceAccountName: springbootadmin
      containers:
      - name: springbootadmin
        image: marcinkasinski/springbootadmin
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: config-springbootadmin-bootstrap-yml-cm
          mountPath: /usr/src/myapp/config/bootstrap.yml
          subPath: bootstrap.yml
      volumes:
        - name: config-springbootadmin-bootstrap-yml-cm
          configMap:
            name: springbootadmin-bootstrap-yml-cm
---
apiVersion: v1
kind: Service
metadata:
  name: springbootadmin
spec:
  type: NodePort
  ports:
  - port: 8080
    #nodePort: 30070
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: springbootadmin
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springbootadmin-ingress
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: springbootadmin
    http:
      paths:
      - path: /
        backend:
          serviceName: springbootadmin
          servicePort: 8080
---
#curl -H "Host: springbootadmin.apps.svc.cluster.local:30999" localhost:30999/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springbootadmin
spec:
  hosts:
  - "springbootadmin.apps.svc.cluster.local:30999"
  - "springbootadmin:30999"
  - "springbootadmin.com:30999"
  gateways:
  - itzone-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: springbootadmin # interpreted as springbootadmin.apps.svc.cluster.local
        #host: ambassador.default.svc.cluster.local # interpreted as springbootadmin.apps.svc.cluster.local
        port:
          number: 8080
          #number: 80
---
